<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_123"
    android:orientation="vertical"
    tools:context="com.dt.anh.dulichvietnam.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_travel_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right|center_vertical"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="60dp"
                android:layout_height="80dp"
                android:gravity="center"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_already_have_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/sign_in"
                    android:textAllCaps="false"
                    android:textColor="#000"
                    android:textSize="20sp"/>
                <View
                    android:layout_width="53dp"
                    android:layout_height="1dp"
                    android:background="#000" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/create_new_account"
        android:textAllCaps="false"
        android:textColor="#000"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:orientation="vertical"
        android:gravity="center">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_username"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:textColorHint="#FFF">
            <EditText
                android:drawableLeft="@drawable/ic_user_name"
                android:inputType="text"
                android:textSize="20sp"
                android:hint="@string/username"
                android:textColorHint="#FFF"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#FFF"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_email_address"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:textColorHint="#FFF">
            <EditText
                android:textSize="20sp"
                android:drawableLeft="@drawable/ic_email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="email address"
                android:textColorHint="#FFF"
                android:textColor="#FFF"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_password"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:textColorHint="#FFF">
            <EditText
                android:textSize="20sp"
                android:drawableLeft="@drawable/ic_pass_word"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:textColorHint="#FFF"
                android:textColor="#FFF"/>
        </android.support.design.widget.TextInputLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="35dp">

        <Button
            android:id="@+id/button"
            android:layout_width="320dp"
            android:layout_height="52dp"
            android:background="@drawable/back_ground_button_log_in"
            android:text="Sign up"
            android:textAllCaps="false"
            android:textColor="#FFF"
            android:textSize="18sp" />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:gravity="center">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or_sign_up_with"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_marginLeft="20dp"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_facebook_circle_color"/>
        <ImageView
            android:layout_marginLeft="20dp"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_google_circle_color"/>
    </LinearLayout>


</LinearLayout>
