<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginBottom="4dp"
                android:paddingLeft="10dp"
                android:text="Điểm đến tháng 11"
                android:textColor="#000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_salient_all_province_month"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingLeft="10dp"
                android:paddingRight="20dp"
                android:text="@string/all_province"
                android:textColor="#262db7"
                android:textSize="16sp" />
        </TableRow>



        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_salient_point_month"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:scrollbars="vertical"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager" />

        <View
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginBottom="4dp"
                android:paddingLeft="10dp"
                android:text="Bãi biển đẹp?"
                android:textColor="#000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_salient_all_place_beach"
                android:textColor="#262db7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingRight="20dp"
                android:paddingLeft="10dp"
                android:text="@string/all_beach"
                android:textSize="16sp" />
        </TableRow>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_salient_point_one_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:scrollbars="vertical"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager" />

        <View
            android:layout_width="match_parent"
            android:layout_height="50dp" />
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginBottom="4dp"
                android:paddingLeft="10dp"
                android:text="@string/go_one_day"
                android:textColor="#000"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/tv_salient_all_place_one_day"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingRight="20dp"
                android:paddingLeft="10dp"
                android:text="@string/all_beach"
                android:textColor="#262db7"
                android:textSize="16sp" />
        </TableRow>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_salient_point_beach"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:scrollbars="vertical"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager" />

        <View
            android:layout_width="match_parent"
            android:layout_height="50dp" />
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_weight="2"
                android:paddingLeft="10dp"
                android:text="@string/mountain_climb"
                android:textColor="#000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_salient_all_place_mountain"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingLeft="10dp"
                android:paddingRight="20dp"
                android:text="@string/all_beach"
                android:textColor="#262db7"
                android:textSize="16sp" />

        </TableRow>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_salient_point_mountain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:scrollbars="vertical"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager" />

        <View
            android:layout_width="match_parent"
            android:layout_height="50dp" />

    </LinearLayout>
</ScrollView>